2000-03-23  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/NSString.m: ([-initWithFormat:arguments:]) added
	implementation using vasprintf() to avoid stack problems.
	* Headers/gnustep/base/preface.h.in: added VASPRINT_* definitions.

2000-03-23  Richard Frith-Macdonald <rfm@gnu.org>

	NSNumber - more extensive rewrite/optimisation ...
	* Headers/gnustep/base/NSValue.h: simplified
	* Source/NSNumber.m: Implemented efficient abstract methods and
	improved caching.
	* Source/NSConcreteNumber.m: More efficient implementations including
	some previously missing methods.

2000-03-23  Adam Fedor  <fedor@gnu.org>

	* configure.in: Check for vasprintf function
	* config/config.vasprintf.c: New file.

2000-03-22  Richard Frith-Macdonald <rfm@gnu.org>

	NSNumber optimisation ...
	* Headers/gnustep/base/NSValue.h: Added a couple of GNUstep specific
	functions for obtaining cached information about methods of NSNumber
	subclasses and hashes of small integer values.
	* Source/NSNumber.m: Added caches for small integer numbers and for
	booleans.  Also added caching mechamism for methods and order info
	for NSNumber concrete subclasses.
	* Source/NSConcreteNumber.m: Added support for much more efficient
	compare and fast hash for small integers.

2000-03-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: ([-description]) implemented.
	* Source/NSArray.m: ([-descriptionWithLocale:indent:]) put space
	after comma even when doing unformatted description.
	* Source/NSDictionary.m: ([-descriptionWithLocale:indent:]) put space
	after semicolon and around equals even when doing unformatted
	description. Don't sort array items in unformatted description.

2000-03-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSGAttributedString.m: ([setAttributes:range:]) make sure
	attributes are set when old range starts at start of new range.

2000-03-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Become an unpriveliged user after binding to