@@ -18,6 +18,7 @@
 
    */
 
+#include "config.h"
 #include	<Foundation/NSArray.h>
 #include	<Foundation/NSData.h>
 #include	<Foundation/NSException.h>
